--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 @import 'tailwindcss';
 
 @theme {
-  --color-blue-700: #4C75D2;
-  --color-off-white: #F8F8F8;
+  --color-blue-700: #4c75d2;
+  --color-primary: #4c75d2;
+  --color-off-white: #f8f8f8;
+  --color-foreground: #000000;
+  --color-background: #ffffff;
 }
 
 @layer utilities {
@@ -19,10 +22,31 @@
 }
 
 @layer base {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   body {
     font-family: var(--font-sans);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #ffffff;
+    color: #000000;
+  }
+
+  #root {
+    width: 100%;
+    min-height: 100vh;
   }
 }
 
